alert confirm prompt

--- a/alert.html
+++ b/alert.html
@@ -8,5 +8,10 @@
 </head>
 <body>
     <h1>alert! i'm coming soon!</h1>
+<button onclick="teacher()">teacher is  coming</button>
+<button onclick="father()">father is coming</button>
+<button onclick="tour()"> Tour</button>
+<button onclick="askQuestion()">What is your name?</button>
+<script src="alert.js"></script>
 </body>
 </html>
